# jnrbase

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .projections.json  .readthedocs.yml  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  NEWS.rst  README.rst  ca_certs_locater.py  nose2.cfg  setup.cfg  setup.py  unittest.cfg
.github/: CONTRIBUTING.rst  ISSUE_TEMPLATE.rst  dependabot.yml
.github/workflows/: pythonpackage.yml
doc/: alternatives.rst  background.rst  conf.py  dependency_choices.rst  faq.rst  future.rst  getting_started.rst  glossary.rst  index.rst  jnrbase.1.rst  pip.dot  release.rst  thaw.rst  todo.rst  upgrading.rst  wordlist.txt
doc/api/: attrdict.rst  cmdline.rst  colourise.rst  compat.rst  config.rst  context.rst  debug.rst  entry.rst  git.rst  httplib2_certs.rst  human_time.rst  i18n.rst  index.rst  iso_8601.rst  json_datetime.rst  pager.rst  pip_support.rst  template.rst  timer.rst  xdg_basedir.rst
extra/: doap.rdf  requirements-base.txt  requirements-cli.txt  requirements-colour.txt  requirements-config.txt  requirements-dev.txt  requirements-doc.txt  requirements-iso_8601.txt  requirements-net.txt  requirements-template.txt  requirements-test.txt  requirements.txt
jnrbase/: __init__.py  _version.py  attrdict.py  cmdline.py  colourise.py  compat.py  config.py  context.py  debug.py  entry.py  git.py  httplib2_certs.py  human_time.py  i18n.py  iso_8601.py  json_datetime.py  pager.py  pip_support.py  template.py  timer.py  xdg_basedir.py
tests/: __init__.py  conftest.py  test_attrdict.py  test_cmdline.py  test_colourise.py  test_compat.py  test_config.py  test_context.py  test_debug.py  test_entry.py  test_git.py  test_httplib2_certs.py  test_human_time.py  test_i18n.py  test_iso_8601.py  test_json_datetime.py  test_pager.py  test_pip_support.py  test_template.py  test_timer.py  test_xdg_basedir.py  utils.py
tests/data/config/: .jnrbaserc
tests/data/config2/: .jnrbaserc
tests/data/git/: empty.tar  funky_names.tar  semver.tar
tests/data/pip/: base.txt  base_abs.txt  comments.txt  invalid_markers.txt
