[aliases]
build_dist = bdist_wheel sdist --formats=gztar,bztar,zip
build_sphinx_dev = build_sphinx --all-files --fresh-env --warning-is-error

[coverage:run]
branch = True
omit =
    jnrbase/__init__.py
    jnrbase/_version.py

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    if __name__ == .__main__.:
fail_under = 100
omit = jnrbase/cmdline.py
precision = 2
skip_covered = True

[flake8]
copyright-check = True
copyright-min-file-size = 1
copyright-regexp = Copyright © 20\d{2}(-20\d{2})? {2}
exclude = .git,build,maybe,jnrbase/_version.py
ignore = P101
max-complexity = 6
select = C,E,F,W,B,B901,B902,B903,B950

[metadata]
name = jnrbase
author = James Rowe
author_email = jnrowe@gmail.com
description = Common utility functionality
keywords = library support utility
python_requires = >=3.5
py_modules = ca_certs_locater
packages = jnrbase
entry_points = {'console_scripts': ['jnrbase = jnrbase.cmdline:cli', ]}
license = GPL-3
url = https://github.com/JNRowe/jnrbase
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    License :: OSI Approved
    License :: OSI Approved :: GNU General Public License (GPL)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[tool:pytest]
addopts =
    --cov jnrbase --cov-report term-missing --no-cov-on-fail
    --durations=5
    --strict
filterwarnings =
    error
minversion = 3.2

[pycodestyle]
select = E, W

[pydocstyle]
select = D203,D212,D404
