[aliases]
build_dist = bdist_wheel sdist --formats=gztar,bztar,zip
build_sphinx_dev = build_sphinx --all-files --fresh-env --warning-is-error

[coverage:run]
branch = True
omit =
    jnrbase/__init__.py
    jnrbase/_version.py

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    if __name__ == .__main__.:
fail_under = 100
omit = jnrbase/cmdline.py
precision = 2
skip_covered = True

[flake8]
application-import-names = jnrbase
copyright-check = True
copyright-min-file-size = 1
copyright-regexp = Copyright © 20\d{2}(-20\d{2})? {2}
exclude = .git,build,maybe,jnrbase/_version.py
ignore = P101
import-order-style = smarkets
max-complexity = 6
select = C,E,F,I,W,B,B901,B902,B903,B950

[metadata]
name = jnrbase
version = attr: jnrbase._version.dotted
author = James Rowe
author_email = jnrowe@gmail.com
description = Common utility functionality
long_description = file: README.rst
keywords = library,support,httplib2
license = GPL-3
url = https://github.com/JNRowe/jnrbase
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved
    License :: OSI Approved :: GNU General Public License (GPL)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
python_requires = >=3.6
project_urls =
    Contributors = https://github.com/JNRowe/jnrbase/contributors/
    Documentation = https://jnrbase.readthedocs.io/
    Git repository = https://github.com/JNRowe/jnrbase/
    Issue tracker = https://github.com/JNRowe/jnrbase/issues/
setup_requires = setuptools>=40.0.0

[options]
packages = jnrbase
py_modules = ca_certs_locater
zip_safe = True

[options.entry_points]
console_scripts =
    jnrbase = jnrbase.cmdline:cli

[tool:pytest]
addopts =
    --cov jnrbase --cov-report term-missing --no-cov-on-fail
    --durations=5
    --strict
filterwarnings =
    error
    # FIXME: This is *only* here until a new jinja release comes
    ignore:Using or importing the ABCs from 'collections'.*:DeprecationWarning
    ignore:find_certs is deprecated.*:deprecation.DeprecatedWarning

minversion = 4.0

[pycodestyle]
select = E, W

[pydocstyle]
select = D203,D212,D404
